--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://bharath:8OBjYjhg4GdVU18U@minijournal.uarvfta.mongodb.net/minijournal?retryWrites=true&w=majority&appName=minijournal
+MONGO_URI=<your mongodb url>
 JWT_SECRET=supersecret
-PORT=3000
+PORT=<your preferred port>
